add HawkScan to the build workflow

--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,19 +1,23 @@
 app:
-  applicationId: ${APP_ID:a919a264-de99-4087-b3b4-5939104caf9f}
-  env: Development
-  host: http://localhost:3000
+    applicationId: dabb1d1d-612d-4a72-ac1b-83f4d4962a47
+    env: Development
+    host: http://localhost:3000
 
-  graphqlConf:
-    enabled: true
-    schemaPath: /graphql
-    requestMethod: POST
-    uriMaxLength: "4000"
-    maxDepth: "7"
-    introspection:
-      requestsPerCycle: "10"
-      requestDelay: "1000"
-    batchQueries: false
-    operation: ALL
-    filePath: ""
+    graphqlConf:
+        enabled: true
+        schemaPath: /graphql
+        requestMethod: POST
+        uriMaxLength: "4000"
+        maxDepth: "7"
+        introspection:
+            requestsPerCycle: "10"
+            requestDelay: "1000"
+        batchQueries: false
+        operation: ALL
+        filePath: ""
+        autopolicy: true
+        autoInputVectors: true
 hawk:
-  failureThreshold: high
+    failureThreshold: high
+    spider:
+        base: false
